# NWExtractor

./: .gitignore  README.md  build.py  pyproject.toml
src/nwextractor/: __init__.py  cli.py  gui.py  updater.py
src/nwextractor/convert/: __init__.py  audio.py  az_deserialize.py  binary_formats.py  caf_parser.py  cgf_parser.py  datasheets.py  fbx_convert.py  gamedata.py  gltf_export.py  heightmaps.py  levels.py  materials.py  misc_formats.py  models.py  terrain.py  textures.py
src/nwextractor/pak/: __init__.py  azcs.py  catalog.py  extractor.py  oodle.py
